--- a/privacy-policy-tebakkosakatainggris.html
+++ b/privacy-policy-tebakkosakatainggris.html
@@ -5,34 +5,77 @@
 <title>Privacy Policy - Tebak Kosakata Inggris</title>
 </head>
 <body style="font-family: Arial; max-width: 900px; margin: auto;">
-<h2>Privacy Policy – Tebak Kosakata Inggris – Game Edukasi</h2>
-<p><strong>Last updated:</strong> 16 November 2025</p>
 
-<p>Tebak Kosakata Inggris – Game Edukasi (“Aplikasi”) dibuat untuk membantu anak-anak belajar kosakata bahasa Inggris dengan cara yang menyenangkan. Kami sangat menghormati privasi pengguna, terutama anak-anak, dan tidak mengumpulkan data pribadi apa pun.</p>
+<h2>Privacy Policy – Tebak Kosakata Inggris</h2>
+<p><strong>Last updated:</strong> 05 Desember 2025</p>
+
+<p>
+Tebak Kosakata Inggris (“Aplikasi”) adalah aplikasi edukasi yang bertujuan membantu pengguna 
+mempelajari kosakata bahasa Inggris melalui permainan tebak kata. Privasi Anda sangat penting 
+bagi kami. Kebijakan Privasi ini menjelaskan bagaimana aplikasi menangani data pengguna.
+</p>
 
 <h3>1. Informasi yang Kami Kumpulkan</h3>
-<p>Aplikasi tidak mengumpulkan data pribadi dari pengguna. Kami tidak mengumpulkan nama, email, foto, lokasi, informasi perangkat, atau identitas lainnya.</p>
+<p>
+Aplikasi <strong>tidak mengumpulkan data pribadi apa pun</strong> dari pengguna. 
+Kami tidak mengumpulkan:
+</p>
+<ul>
+  <li>Nama</li>
+  <li>Email</li>
+  <li>Foto</li>
+  <li>Lokasi</li>
+  <li>Kontak</li>
+  <li>Informasi perangkat</li>
+  <li>Identitas pribadi lainnya</li>
+</ul>
+<p>
+Semua aktivitas permainan berlangsung secara lokal di perangkat pengguna.
+</p>
 
 <h3>2. Izin (Permissions)</h3>
-<p>Aplikasi tidak meminta izin khusus dari perangkat pengguna.</p>
+<p>
+Aplikasi <strong>tidak meminta izin khusus apa pun</strong> seperti kamera, mikrofon, lokasi, 
+atau penyimpanan. Seluruh fitur dapat digunakan tanpa memberikan akses apa pun.
+</p>
 
 <h3>3. Penggunaan Data</h3>
-<p>Karena aplikasi tidak mengumpulkan data, tidak ada data yang disimpan atau dibagikan.</p>
+<p>
+Karena aplikasi tidak mengumpulkan data, tidak ada informasi apa pun yang disimpan, 
+diproses, atau dianalisis oleh pihak pengembang.
+</p>
 
 <h3>4. Berbagi Data Dengan Pihak Ketiga</h3>
-<p>Aplikasi tidak membagikan informasi apa pun kepada pihak ketiga.</p>
+<p>
+Aplikasi <strong>tidak membagikan</strong> data pengguna kepada pihak ketiga dalam bentuk apa pun. 
+Kami tidak menampilkan iklan berbasis data, tidak menggunakan pelacakan pihak ketiga, dan 
+tidak mengumpulkan log aktivitas.
+</p>
 
 <h3>5. Keamanan</h3>
-<p>Kami berusaha memastikan aplikasi aman dan sesuai untuk anak-anak.</p>
+<p>
+Walaupun aplikasi tidak mengumpulkan data, kami tetap berusaha memastikan bahwa aplikasi 
+berjalan dengan aman dan bebas dari aktivitas berbahaya.
+</p>
 
-<h3>6. Konten Untuk Anak-anak</h3>
-<p>Aplikasi ditujukan untuk anak-anak usia 6–12 tahun dan mematuhi COPPA dan GDPR-K.</p>
+<h3>6. Penggunaan oleh Semua Usia</h3>
+<p>
+Aplikasi dapat digunakan oleh pengguna dari semua kelompok usia. Karena tidak ada pengumpulan data, 
+aplikasi ini aman untuk digunakan oleh anak-anak maupun orang dewasa. Namun, aplikasi ini 
+<strong>tidak secara khusus ditujukan untuk anak-anak</strong>.
+</p>
 
 <h3>7. Perubahan Kebijakan Privasi</h3>
-<p>Kami dapat memperbarui kebijakan ini sewaktu-waktu.</p>
+<p>
+Kami dapat memperbarui Kebijakan Privasi ini sewaktu-waktu. Setiap perubahan akan dipublikasikan 
+di halaman ini dengan tanggal pembaruan terbaru.
+</p>
 
 <h3>8. Kontak</h3>
-<p>Email: fajarseptian98@gmail.com </p>
+<p>
+Jika Anda memiliki pertanyaan tentang Kebijakan Privasi ini, silakan hubungi kami:<br>
+<strong>Email:</strong> fajarseptian98@gmail.com
+</p>
 
 </body>
 </html>
